# picsi

./: .gitignore  README.md  pyproject.toml
picsi/: config.py  config.toml  picsi.py
picsi/commands/: build.py  disable.py  down.py  enable.py  install.py  status.py  uninstall.py  up.py
picsi/scripts/: mkusb.sh  picsi-ci.toml  rmusb.sh
tests/: test_picsi.py
