[tool.poetry]
name = "picsi"
version = "0.0.12"
description = "CSI collection on Raspberry Pi"
authors = ["Aravind Reddy Voggu <zerodividedby0@gmail.com>"]
maintainers = ["Aravind Reddy Voggu <zerodividedby0@gmail.com>"]
readme = "README.md"
repository = "https://github.com/nexmonster/picsi.git"
keywords = ["Nexmon", "CSI", "Nexmon_CSI", "WiFi"]
license = "MIT"

[tool.poetry.scripts]
picsi = "picsi.picsi:app"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
tomli = "^2.0.0"
typer = {extras = ["all"], version = "^0.4.0"}
requests = "^2.27.1"
halo = "^0.0.31"
tomli-w = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
grip = "^4.5.2"
black = "^22.1.0"
mypy = "^0.931"
pylama = "^8.3.7"
types-requests = "^2.27.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
